fix: tabla de equipos y sidebar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -53,7 +53,7 @@
     --color-sidebar-foreground: #000000;
     --color-sidebar-primary: #e0e0e0;
     --color-sidebar-primary-foreground: #000000;
-    --color-sidebar-accent: #d0d0d0;
+    --color-sidebar-accent: #B0E0D3;
     --color-sidebar-accent-foreground: #000000;
     --color-sidebar-border: #c0c0c0;
     --color-sidebar-ring: #b0b0b0;
